# thread-pool

./: BS_thread_pool.hpp  BS_thread_pool_light_test.cpp  BS_thread_pool_maniac_test.cpp  BS_thread_pool_test.cpp  CMakeLists.txt  README.md  continuation_test.cpp  monolithic_examples.h  monolithic_main.c  multi_future_test.cpp
.github/workflows/: run-tests.yml
include/: BS_thread_pool.hpp
tests/: BS_thread_pool_test.cpp
